--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <div class="container">
           <h3>Teddy Sannan: Co-Founder</h3>
           <div>
-            <p style="float: left;"><img src="teddy.jpg" height="150px" width="150px" border="1px"></p>
+            <p style="float: left;"><img src="Images/teddy.jpg" height="150px" width="150px" border="1px"></p>
             <br><br><br>
             <p>Co-Founder of NextGen Sens and SmartRidge, co-designer of NextGen Sens website and product.</p>
             <p>Contact: tsann010@uottawa.ca</p>
@@ -31,7 +31,7 @@
   <br><br><br>
   <h3 style="text-align:left;">Rodney Kiwan: Co-Founder</h3>
   <div>
-    <p style="float: left;"><img src="teddy.jpg" height="150px" width="150px" border="1px"></p>
+    <p style="float: left;"><img src="Images/teddy.jpg" height="150px" width="150px" border="1px"></p>
     <br><br><br>
     <p>Explain...</p>
     <p>Contact: email</p>
@@ -40,7 +40,7 @@
   <br><br><br>
   <h3 style="text-align:left;">Vivek Bhandari: Co-Founder</h3>
   <div>
-    <p style="float: left;"><img src="teddy.jpg" height="150px" width="150px" border="1px"></p>
+    <p style="float: left;"><img src="Images/teddy.jpg" height="150px" width="150px" border="1px"></p>
     <br><br><br>
     <p>Explain...</p>
     <p>Contact: email</p>
@@ -49,7 +49,7 @@
   <br><br><br>
   <h3 style="text-align:left;">Markello Letang: Co-Founder</h3>
   <div>
-    <p style="float: left;"><img src="teddy.jpg" height="150px" width="150px" border="1px"></p>
+    <p style="float: left;"><img src="Images/teddy.jpg" height="150px" width="150px" border="1px"></p>
     <br><br><br>
     <p>Explain...</p>
     <p>Contact: email</p>
@@ -58,7 +58,7 @@
   <br><br><br>
   <h3 style="text-align:left;">Jonathan Colsante: Co-Founder</h3>
   <div>
-    <p style="float: left;"><img src="teddy.jpg" height="150px" width="150px" border="1px"></p>
+    <p style="float: left;"><img src="Images/teddy.jpg" height="150px" width="150px" border="1px"></p>
     <br><br><br>
     <p>Explain...</p>
     <p>Contact: email</p>
