base code for the bottom pages

--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <style type="text/css">
@@ -59,5 +60,65 @@
     <p>Explain...</p>
     <p>Contact: email</p>
   </div> 
+
+  
+  <!-- some pop up pages, we'll see-->
+  <br>
+  <br>
+  <br>
+  <hr>
+  <body>
+    <br>
+    <!--Table 1-->
+    <table style="width:85%">
+      <!-- Guess We'll have to do the spacing with CSS-->
+      <tr>
+        <th>Account</th>
+        <th>Support</th>
+        <th>Our company</th>
+      </tr>
+      <tr>
+        <td style="text-align:center"><a href = "#">My Account</a></td>
+        <td style="text-align:center"><a href = "#">tech Support</a></td>
+        <td style="text-align:center"><a href = "#">About</a></td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><a href = "#">order status</a></td>
+        <td style="text-align:center"><a href = "#">Contact US</a></td>
+        <td style="text-align:center"><a href = "#">Social Impact</a></td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><a href = "#">My products</a></td>
+        <td style="text-align:center"></td>
+        <td style="text-align:center"><a href = "#"> Perspectives</a></td>
+      </tr>  
+    </table>
+
+    <br><br>
+    <table style="width:85%">
+      <!-- Guess We'll have to do the spacing with CSS-->
+      <tr>
+        <th>Partners</th>
+        <th>Ressources</th>
+        <th>Contact</th>
+      </tr>
+      <tr>
+        <td style="text-align:center"><a href = "#">My Account</a></td>
+        <td style="text-align:center"><a href = "#">tech Support</a></td>
+        <td style="text-align:center"><a href = "#">About</a></td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><a href = "#">order status</a></td>
+        <td style="text-align:center"><a href = "#">Contact US</a></td>
+        <td style="text-align:center"><a href = "#">Social Impact</a></td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><a href = "#">My products</a></td>
+        <td style="text-align:center"></td>
+        <td style="text-align:center"><a href = "#"> Perspectives</a></td>
+      </tr>  
+    </table>
+    <br>
+  </body>
     
 <html/>
