Half way, making the menu UI

--- a/about.html
+++ b/about.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <style type="text/css">
       img {
         border-radius: 50%;
       }
     </style>
+
+    <nav>
+
+      <label class=logo> NextGenSense</label>
+      <button class="menu button" id="btnNav", type="button">
+        <label class=menu> ☰ </label>
+      </button>
+
+    </nav>
+      <table class="beta">
+        <tr>
+          <td><a href="#">Home</a></td>
+        </tr>
+        <tr>
+          <td><a href="#" >About</a></td>
+        </tr>
+        <tr>
+          <td><a href="#">Sercices</a></td>
+        </tr>
+        <tr>
+          <td><a href="#">Contact</a></td>
+        </tr>
+        <tr>
+          <td><a href="#">Feedback</a></td>
+        </tr>
+      </table>
+    
   </head>
   
   <div class="about-section">
@@ -63,9 +91,7 @@
 
   
   <!-- some pop up pages, we'll see-->
-  <br>
-  <br>
-  <br>
+  <br><br><br>
   <hr>
   <body>
     <br>
