Style the menu table

--- a/about.html
+++ b/about.html
@@ -9,28 +9,27 @@
     </style>
 
     <nav>
-
+      <!-- for evrything at the very top-->
       <label class=logo> NextGenSense</label>
-      <button class="menu button" id="btnNav", type="button">
-        <label class=menu> ☰ </label>
-      </button>
-
-    </nav>
+      <label class=menu> ☰ </label>
+    <!-- table for home, services...-->
+    </nav class="components">
       <table class="beta">
+        
         <tr>
-          <td><a href="#">Home</a></td>
+          <td class="beta"><a href="#">Home</a></td>
         </tr>
         <tr>
-          <td><a href="#" >About</a></td>
+          <td class="beta"><a href="#" >About</a></td>
         </tr>
         <tr>
-          <td><a href="#">Sercices</a></td>
+          <td class="beta"><a href="#">Sercices</a></td>
         </tr>
         <tr>
-          <td><a href="#">Contact</a></td>
+          <td class="beta"><a href="#">Contact</a></td>
         </tr>
         <tr>
-          <td><a href="#">Feedback</a></td>
+          <td class="beta"><a href="#">Feedback</a></td>
         </tr>
       </table>
     
