added pallete txt and fixed title in about

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <nav>
       <!-- for evrything at the very top-->
-      <label class=logo> NextGenSense</label>
+      <label class=logo> NextGen Sens</label>
       <label class=menu> ☰ </label>
     <!-- table for home, services...-->
     </nav class="components">
