Adding icons and text

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,28 @@
 <html>
   <body>
-    <h1>Contact Us</h1>
-    <p1>Name:<br> Number:<br> Email:</p1>
+    <h1 style="text-align:center"><u>Contact NEXTGEN-SENS</u></h1>
+    <h2 style="text-align:center">Sales and Product Inquiries</h2>
+    <table>
+      <tr>
+        <th><h3>Call Us</h3></th>
+        <th><h3>Email Us</h3></th>
+      </tr>
+      <tr>
+        <td style="text-align:center">
+        <div>
+          <p1>Give us a call and we'll be happy to answer your question or direct you to the appropriate department.<br></p1>
+        <p style="text-align:center;"><img src="phone_icon.jpg" height="150px" width="150px" ></p>
+        <p1>1-800-456-8789</p1>
+        </div>
+      </td>
+        <td style="text-align:center">
+          <div>
+            <p1>If you'd rather communicate through writting, we would be more than happy to assist you via Email.<br></p1>
+          <p style="text-align:center;"><img src="Email_icon.png" height="150px" width="150px" ></p>
+          <p1>Inquiries@NEXGEN-SENS.ca<p1>
+          </div>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
