Ensuring images can be accessed

--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,14 @@
         <td style="text-align:center">
         <div>
           <p1>Give us a call and we'll be happy to answer your question or direct you to the appropriate department.<br></p1>
-        <p style="text-align:center;"><img src="phone_icon.jpg" height="150px" width="150px" ></p>
+        <p style="text-align:center;"><img src="Images/phone_icon.jpg" height="150px" width="150px" ></p>
         <p1>1-800-456-8789</p1>
         </div>
       </td>
         <td style="text-align:center">
           <div>
             <p1>If you'd rather communicate through writting, we would be more than happy to assist you via Email.<br></p1>
-          <p style="text-align:center;"><img src="Email_icon.png" height="150px" width="150px" ></p>
+          <p style="text-align:center;"><img src="Images/Email_icon.png" height="150px" width="150px" ></p>
           <p1>Inquiries@NEXGEN-SENS.ca<p1>
           </div>
         </td>
