--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,28 @@
 <html>
+  <link rel="stylesheet" href="style.css">
   <body>
     <h1 style="text-align:center"><u>Contact NEXTGEN-SENS</u></h1>
     <h2 style="text-align:center">Sales and Product Inquiries</h2>
-    <table>
+    <table class="contact">
       <tr>
-        <th><h3>Call Us</h3></th>
-        <th><h3>Email Us</h3></th>
+        <th><h3><br><u>Call Us</u></h3></th>
+        <th><h3><br><u>Email Us</u></h3></th>
       </tr>
       <tr>
         <td style="text-align:center">
         <div>
           <p1>Give us a call and we'll be happy to answer your question or direct you to the appropriate department.<br></p1>
         <p style="text-align:center;"><img src="Images/phone_icon.jpg" height="150px" width="150px" ></p>
-        <p1>1-800-456-8789</p1>
+        <p1>1-800-456-8789<br></p1>
+        <br>
         </div>
       </td>
         <td style="text-align:center">
           <div>
             <p1>If you'd rather communicate through writting, we would be more than happy to assist you via Email.<br></p1>
           <p style="text-align:center;"><img src="Images/Email_icon.png" height="150px" width="150px" ></p>
-          <p1>Inquiries@NEXGEN-SENS.ca<p1>
+          <p1>Inquiries@NEXGEN-SENS.ca<br><p1>
+            <br>
           </div>
         </td>
       </tr>
