--- a/home.html
+++ b/home.html
@@ -1,1 +1,12 @@
-<html></html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<div class="button">
+    <button type="button">Order Now</button>
+</div>
+
+
+</html>
